Make sure to fire XBL constructors on bindings attached to display:none nodes. Bug 188496, r+sr=dbaron